# simple_fission

./: CMakeLists.txt  README.md  fission.cc  run.mac
include/: FREYA.hh  NeutronPhysicsFREYA.hh  SimpleDetector.hh  SimpleGeometry.hh  SimpleRunAction.hh
src/: FREYA.cc  G4FissLib_new.cc  G4FissionLibrary_new.cc  NeutronPhysicsFREYA.cc  SimpleDetector.cc  SimpleGeometry.cc  SimpleParticleSource.cc  SimpleRunAction.cc
